--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "passport-discord",
-  "version": "0.1.3-koya",
+  "version": "0.1.4",
   "description": "Passport strategy for authentication with Discord (discordapp.com)",
   "main": "lib/index.js",
   "repository": {
@@ -22,6 +22,6 @@
   },
   "homepage": "https://github.com/nicholastay/passport-discord#readme",
   "dependencies": {
-    "passport-oauth2": "^1.2.0"
+    "passport-oauth2": "^1.5.0"
   }
 }
