--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "passport-discord",
-  "version": "0.1.4",
+  "version": "0.1.4-koya",
   "description": "Passport strategy for authentication with Discord (discordapp.com)",
   "main": "lib/index.js",
   "repository": {
